--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             </div>
                 <div id="box">
                     <ul id="sample-list">
-                        <li class="audiosample" sampleFile="HIMITSU Big Synth Chord.ogg">HIMITSU Big Synth Chord.ogg</li>
-                        <li class="audiosample" sampleFile="HIMITSU Soft Piano.ogg">HIMITSU Soft Piano.ogg</li>
-                        <li class="audiosample" sampleFile="HIMITSU Soft Synth.ogg">HIMITSU Soft Synth.ogg</li>
-                        <li class="audiosample" sampleFile="HIMITSU Piano Low.ogg">HIMITSU Piano Low.ogg</li>
-                        <li class="audiosample" sampleFile="HIMITSU Drum Beat.ogg">HIMITSU Drum Beat.ogg</li>
-                        <li class="audiosample" sampleFile="HIMITSU Cute Vocals.ogg">HIMITSU Cute Vocals.ogg</li>
-                        <li class="audiosample" sampleFile="HIMITSU Main Melody.ogg">HIMITSU Main Melody.ogg</li>
+                        <li class="audiosample" sample-id="0" sampleFile="HIMITSU Big Synth Chord.ogg">HIMITSU Big Synth Chord.ogg</li>
+                        <li class="audiosample" sample-id="1" sampleFile="HIMITSU Soft Piano.ogg">HIMITSU Soft Piano.ogg</li>
+                        <li class="audiosample" sample-id="2" sampleFile="HIMITSU Soft Synth.ogg">HIMITSU Soft Synth.ogg</li>
+                        <li class="audiosample" sample-id="3" sampleFile="HIMITSU Piano Low.ogg">HIMITSU Piano Low.ogg</li>
+                        <li class="audiosample" sample-id="4" sampleFile="HIMITSU Drum Beat.ogg">HIMITSU Drum Beat.ogg</li>
+                        <li class="audiosample" sample-id="5" sampleFile="HIMITSU Cute Vocals.ogg">HIMITSU Cute Vocals.ogg</li>
+                        <li class="audiosample" sample-id="6" sampleFile="HIMITSU Main Melody.ogg">HIMITSU Main Melody.ogg</li>
                     </ul>
                 </div>
         </div>
