CSS changes. project controller draggable/non-draggable option.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <i id="volume-icon-down" class="fa fa-volume-down" aria-hidden="true"></i>
             <input id="volumeKnob" type="range" value="100">
             <i id="volume-icon-up" class="fa fa-volume-up" aria-hidden="true"></i>
+
+            <i id="locker" class="fa fa-lock" aria-hidden="true"></i>
         </div>
             <div id="playlist-container"></div>
         <div id="sample-library">
@@ -108,14 +110,10 @@
         </div>
 
         <a id="audio-recorder"></a>
-        <!--<div class="push"></div>-->
     </div>
-    <!--<div class="footer">Credits</div>-->
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-Knob/1.2.13/jquery.knob.min.js"></script>
     <script src="bundle.js"></script>
-
 </body>
 </html>
