starting on adding audio visualizer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <i id="play-all-button" class="fa fa-play" aria-hidden="true"></i>
             <i id="stop-all-button" class="fa fa-stop" aria-hidden="true"></i>
             <i id="record-button"class="fa fa-circle" aria-hidden="true"></i>
-            <i id="loop-button" class="fa fa-repeat" aria-hidden="true"></i>
+            <!--<i id="loop-button" class="fa fa-repeat" aria-hidden="true"></i>-->
 
             <select id="starting-point" disabled="">
                 <option selected="selected">-</option>
@@ -55,8 +55,6 @@
         <i id="garbageCan" class="fa fa-trash" aria-hidden="true"></i>
         
         <div id="inactive-samples"></div>
-
-        <canvas id="visualizer" width="300" height="300"></canvas>
 
         <div id="mixer-board">
             <div id="route1" class="mixer-route">
