fixed preview button bug + added a volume meter

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 
         <a id="audio-recorder"></a>
     </div>
+    <canvas id="meter" width="500" height="50"></canvas>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-Knob/1.2.13/jquery.knob.min.js"></script>
