added volume meter for each channel

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
                 </div>
                 1
                 <input id="1" name="checkName" type="checkbox">
+
+                <canvas id="volume-meter-1" width="60" height="130"></canvas>
             </div>
             <div id="route2" class="mixer-route">
                 <div>
@@ -76,6 +78,8 @@
                 </div>
                 2
                 <input id="2" name="checkName" type="checkbox">
+
+                <canvas id="volume-meter-2" width="60" height="130"></canvas>
             </div>
             <div id="route3" class="mixer-route">
                 <div>
@@ -86,6 +90,8 @@
                 </div>
                 3
                 <input id="3" name="checkName" type="checkbox">
+
+                <canvas id="volume-meter-3" width="60" height="130"></canvas>
             </div>
             <div id="route4" class="mixer-route">
                 <div>
@@ -96,6 +102,8 @@
                 </div>
                 4
                 <input id="4" name="checkName" type="checkbox">
+
+                <canvas id="volume-meter-4" width="60" height="130"></canvas>
             </div>
             <div id="route5" class="mixer-route">
                 <div>
@@ -106,12 +114,14 @@
                 </div>
                 5
                 <input id="5" name="checkName" type="checkbox">
+
+                <canvas id="volume-meter-5" width="60" height="130"></canvas>
             </div>
         </div>
 
         <a id="audio-recorder"></a>
     </div>
-    <canvas id="meter" width="500" height="50"></canvas>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-Knob/1.2.13/jquery.knob.min.js"></script>
