starting point changes.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <i id="record-button"class="fa fa-circle" aria-hidden="true"></i>
             <!--<i id="loop-button" class="fa fa-repeat" aria-hidden="true"></i>-->
 
-            <select id="starting-point" disabled="">
+            <select id="starting-point">
                 <option selected="selected">-</option>
                 <option id="button1" value="1">2</option>
                 <option id="button2" value="2">3</option>
@@ -67,7 +67,7 @@
                 1
                 <input id="1" name="checkName" type="checkbox">
 
-                <canvas id="volume-meter-1" width="60" height="130"></canvas>
+                <canvas id="volume-meter-1" class="volumeMeter" width="25" height="130"></canvas>
             </div>
             <div id="route2" class="mixer-route">
                 <div>
