--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
                 </div>
                 <div>    
                     <input id="lowpassFilter1" class="mixer-filter" type="range" value="0" orient="vertical">
+                    <p>1</p>
                 </div>
-                1
-                <input id="1" name="checkName" type="checkbox">
+                
+                <input id="1" class="mutebox" name="checkName" type="checkbox">
 
                 <canvas id="volume-meter-1" class="volumeMeter" width="25" height="130"></canvas>
             </div>
@@ -76,11 +77,11 @@
                 </div>
                 <div>
                     <input id="lowpassFilter2" class="mixer-filter" type="range" value="0" orient="vertical">
+                    <p>2</p>
                 </div>
-                2
-                <input id="2" name="checkName" type="checkbox">
+                <input id="2" class="mutebox" name="checkName" type="checkbox">
 
-                <canvas id="volume-meter-2" width="60" height="130"></canvas>
+                <canvas id="volume-meter-2" class="volumeMeter" width="25" height="130"></canvas>
             </div>
             <div id="route3" class="mixer-route">
                 <div>
@@ -88,11 +89,11 @@
                 </div>
                 <div>
                     <input id="lowpassFilter3" class="mixer-filter" type="range" value="0" orient="vertical">
+                    <p>3</p>
                 </div>
-                3
-                <input id="3" name="checkName" type="checkbox">
+                <input id="3" class="mutebox" name="checkName" type="checkbox">
 
-                <canvas id="volume-meter-3" width="60" height="130"></canvas>
+                <canvas id="volume-meter-3" class="volumeMeter" width="25" height="130"></canvas>
             </div>
             <div id="route4" class="mixer-route">
                 <div>
@@ -100,11 +101,11 @@
                 </div>
                 <div>
                     <input id="lowpassFilter4" class="mixer-filter" type="range" value="0" orient="vertical">
+                    <p>4</p>
                 </div>
-                4
-                <input id="4" name="checkName" type="checkbox">
+                <input id="4" class="mutebox" name="checkName" type="checkbox">
 
-                <canvas id="volume-meter-4" width="60" height="130"></canvas>
+                <canvas id="volume-meter-4" class="volumeMeter" width="25" height="130"></canvas>
             </div>
             <div id="route5" class="mixer-route">
                 <div>
@@ -112,11 +113,11 @@
                 </div>
                 <div>
                     <input id="lowpassFilter5" class="mixer-filter" type="range" value="0" orient="vertical">
+                    <p>5</p>
                 </div>
-                5
-                <input id="5" name="checkName" type="checkbox">
+                <input id="5" class="mutebox" name="checkName" type="checkbox">
 
-                <canvas id="volume-meter-5" width="60" height="130"></canvas>
+                <canvas id="volume-meter-5" class="volumeMeter" width="25" height="130"></canvas>
             </div>
         </div>
 
