--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
             </div>
                 <div id="box">
                     <ul id="sample-list">
-                        <li class="audiosample" sample-id="0" sampleFile="HIMITSU Big Synth Chord.ogg">HIMITSU Big Synth Chord.ogg</li>
-                        <li class="audiosample" sample-id="1" sampleFile="HIMITSU Soft Piano.ogg">HIMITSU Soft Piano.ogg</li>
-                        <li class="audiosample" sample-id="2" sampleFile="HIMITSU Soft Synth.ogg">HIMITSU Soft Synth.ogg</li>
-                        <li class="audiosample" sample-id="3" sampleFile="HIMITSU Piano Low.ogg">HIMITSU Piano Low.ogg</li>
-                        <li class="audiosample" sample-id="4" sampleFile="HIMITSU Drum Beat.ogg">HIMITSU Drum Beat.ogg</li>
-                        <li class="audiosample" sample-id="5" sampleFile="HIMITSU Cute Vocals.ogg">HIMITSU Cute Vocals.ogg</li>
-                        <li class="audiosample" sample-id="6" sampleFile="HIMITSU Main Melody.ogg">HIMITSU Main Melody.ogg</li>
+                        <li sample-id="0"><i id="0" class="fa fa-play-circle" aria-hidden="true"></i>HIMITSU Big Synth Chord.ogg</li>
+                        <li sample-id="1"><i id="1" class="fa fa-play-circle" aria-hidden="true"></i>HIMITSU Soft Piano.ogg</li>
+                        <li sample-id="2"><i id="2" class="fa fa-play-circle" aria-hidden="true"></i>HIMITSU Soft Synth.ogg</li>
+                        <li sample-id="3"><i id="3" class="fa fa-play-circle" aria-hidden="true"></i>HIMITSU Piano Low.ogg</li>
+                        <li sample-id="4"><i id="4" class="fa fa-play-circle" aria-hidden="true"></i>HIMITSU Drum Beat.ogg</li>
+                        <li sample-id="5"><i id="5" class="fa fa-play-circle" aria-hidden="true"></i>HIMITSU Cute Vocals.ogg</li>
+                        <li sample-id="6"><i id="6" class="fa fa-play-circle" aria-hidden="true"></i>HIMITSU Main Melody.ogg</li>
                     </ul>
                 </div>
         </div>
@@ -121,6 +121,16 @@
             </div>
         </div>
 
+        <select id="channel-setter">
+            <option id="1" value="2">2</option>
+            <option id="1" value="5">5</option>
+        </select>
+
+        <select id="slot-setter">
+            <option id="1" value="4">4</option>
+            <option id="1" value="8">8</option>
+        </select>
+        <button id="createChannels">Create</button>
         <a id="audio-recorder"></a>
     </div>
     
