some responsive css design and small things

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <h1 id="header"><img src="images/turntable_icon.png">DJ Wannabe</h1>
 
     <div id="wrapper">
-        <div id="playlist-container"></div>
+        <div id="playlist-container">
+        </div>
 
         <div id="sample-library">
             <div id="title-bar">
@@ -49,11 +50,11 @@
                 </div>
                 <div>    
                     <input id="lowpassFilter1" type="text" value="0" class="mixer-filter">
-                    <p>1</p>
+                    <p>1<i class="fa fa-circle-o-notch fa-spin fa-fw" aria-hidden="true"></i></p>
                 </div>
                 
                 <input id="m1" class="mutebox" name="checkName" type="checkbox">
-
+                
                 <canvas id="volume-meter-1" class="volumeMeter" width="25" height="130"></canvas>
             </div>
             <div id="route2" class="mixer-route">
