channel panning option + volume meter gradient

--- a/index.html
+++ b/index.html
@@ -45,69 +45,69 @@
 
         <div id="mixer-board">
             <div id="route1" class="mixer-route">
-                <input id="panner1" type="range" min="-50" max="50" step="50" value="0" class="stereo-panner">
+                <input id="panner1" type="range" min="-50" max="50" step="50" value="0" class="stereo-panner" title="L - R panning">
                 <div>
-                    <input id="mixVolume1" class="mixer-volume" type="range" value="100" orient="vertical">
+                    <input id="mixVolume1" class="mixer-volume" type="range" value="100" orient="vertical" title="Channel 1 volume">
                 </div>
-                <div class="mixer-filter">     
+                <div class="mixer-filter" title="Low-pass filter">     
                     <input id="lowpassFilter1" type="text" value="0" class="jquery-filter-knob">
                     <p>1</p>
                     <!--<i class="fa fa-circle-o-notch fa-spin fa-fw" aria-hidden="true"></i>-->
                 </div>
                 
-                <input id="m1" class="mutebox" name="checkName" type="checkbox">
+                <input id="m1" class="mutebox" name="checkName" type="checkbox" title="Mute channel 1">
                 
                 <canvas id="volume-meter-1" class="volumeMeter" width="25" height="130"></canvas>
             </div>
             <div id="route2" class="mixer-route">
-                <input id="panner2" type="range" min="-50" max="50" step="50" value="0" class="stereo-panner">
+                <input id="panner2" type="range" min="-50" max="50" step="50" value="0" class="stereo-panner" title="L - R panning">
                 <div>
-                    <input id="mixVolume2" class="mixer-volume" type="range" value="100" orient="vertical">
+                    <input id="mixVolume2" class="mixer-volume" type="range" value="100" orient="vertical" title="Channel 2 volume">
                 </div>
-                <div class="mixer-filter">   
+                <div class="mixer-filter" title="Low-pass filter">   
                     <input id="lowpassFilter2" type="text" value="0" class="jquery-filter-knob">
                     <p>2</p>
                 </div>
-                <input id="m2" class="mutebox" name="checkName" type="checkbox">
+                <input id="m2" class="mutebox" name="checkName" type="checkbox" title="Mute channel 2">
 
                 <canvas id="volume-meter-2" class="volumeMeter" width="25" height="130"></canvas>
             </div>
             <div id="route3" class="mixer-route">
-                <input id="panner3" type="range" min="-50" max="50" step="50" value="0" class="stereo-panner">
+                <input id="panner3" type="range" min="-50" max="50" step="50" value="0" class="stereo-panner" title="L - R panning">
                 <div>
-                    <input id="mixVolume3" class="mixer-volume" type="range" value="100" orient="vertical">
+                    <input id="mixVolume3" class="mixer-volume" type="range" value="100" orient="vertical" title="Channel 3 volume"> 
                 </div>
-                <div class="mixer-filter">   
+                <div class="mixer-filter" title="Low-pass filter">   
                     <input id="lowpassFilter3" type="text" value="0" class="jquery-filter-knob">
                     <p>3</p>
                 </div>
-                <input id="m3" class="mutebox" name="checkName" type="checkbox">
+                <input id="m3" class="mutebox" name="checkName" type="checkbox" title="Mute channel 3">
 
                 <canvas id="volume-meter-3" class="volumeMeter" width="25" height="130"></canvas>
             </div>
             <div id="route4" class="mixer-route">
-                <input id="panner4" type="range" min="-50" max="50" step="50" value="0" class="stereo-panner">
+                <input id="panner4" type="range" min="-50" max="50" step="50" value="0" class="stereo-panner" title="L - R panning">
                 <div>
-                    <input id="mixVolume4" class="mixer-volume" type="range" value="100" orient="vertical">
+                    <input id="mixVolume4" class="mixer-volume" type="range" value="100" orient="vertical" title="Channel 4 volume">
                 </div>
-                <div class="mixer-filter">   
+                <div class="mixer-filter" title="Low-pass filter">   
                     <input id="lowpassFilter4" type="text" value="0" class="jquery-filter-knob">
                     <p>4</p>
                 </div>
-                <input id="m4" class="mutebox" name="checkName" type="checkbox">
+                <input id="m4" class="mutebox" name="checkName" type="checkbox" title="Mute channel 4">
 
                 <canvas id="volume-meter-4" class="volumeMeter" width="25" height="130"></canvas>
             </div>
             <div id="route5" class="mixer-route">
-                <input id="panner5" type="range" min="-50" max="50" step="50" value="0" class="stereo-panner">
+                <input id="panner5" type="range" min="-50" max="50" step="50" value="0" class="stereo-panner" title="L - R panning">
                 <div>
-                    <input id="mixVolume5" class="mixer-volume" type="range" value="100" orient="vertical">
+                    <input id="mixVolume5" class="mixer-volume" type="range" value="100" orient="vertical" title="Channel 5 volume">
                 </div>
-                <div class="mixer-filter">   
-                    <input id="lowpassFilter5" type="text" value="0" class="jquery-filter-knob">
+                <div class="mixer-filter" title="Low-pass filter">   
+                    <input id="lowpassFilter5" type="text" value="0" class="jquery-filter-knob" >
                     <p>5</p>
                 </div>
-                <input id="m5" class="mutebox" name="checkName" type="checkbox">
+                <input id="m5" class="mutebox" name="checkName" type="checkbox" title="Mute channel 5">
 
                 <canvas id="volume-meter-5" class="volumeMeter" width="25" height="130"></canvas>
             </div>
