input range webkit changes. Play button logic. Record button disabled in chrome.

--- a/index.html
+++ b/index.html
@@ -112,14 +112,15 @@
                 <canvas id="volume-meter-5" class="volumeMeter" width="25" height="130"></canvas>
             </div>
         </div>
+
         <div id="project-controller">
             <i id="play-all-button" class="fa fa-play" aria-hidden="true"></i>
-            <i id="stop-all-button" class="fa fa-stop" aria-hidden="true"></i>
+            <!--<i id="stop-all-button" class="fa fa-stop" aria-hidden="true"></i>-->
             <i id="record-button" class="fa fa-circle" aria-hidden="true"></i>
             <!--<i id="loop-button" class="fa fa-repeat" aria-hidden="true"></i>-->
 
-            <select id="starting-point">
-                <option selected="selected">-</option>
+            <select id="starting-point" title="Playback starting point">
+                <option selected="selected">1</option>
                 <option id="button1" value="1">2</option>
                 <option id="button2" value="2">3</option>
                 <option id="button3" value="3">4</option>
