starting point fix

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <!--<i id="loop-button" class="fa fa-repeat" aria-hidden="true"></i>-->
 
             <select id="starting-point" title="Playback starting point">
-                <option selected="selected">1</option>
+                <option selected="selected" value="0">1</option>
                 <option id="button1" value="1">2</option>
                 <option id="button2" value="2">3</option>
                 <option id="button3" value="3">4</option>
