added touch compability

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-Knob/1.2.13/jquery.knob.min.js"></script>
+    <script src="jquery.ui.touch-punch.min.js"></script>
 <script>
     $( "*" ).css({'visibility': 'hidden'});
 </script>
@@ -145,6 +146,7 @@
         </div>
         <a id="audio-recorder"></a>
     </div>
+
     <script src="bundle.js"></script>
 </body>
 </html>
