added more audio samples

--- a/index.html
+++ b/index.html
@@ -25,18 +25,35 @@
 
         <div id="sample-library">
             <div id="title-bar">
-                <p>Pick your audio samples here!</p>
+                <p>Sample Library</p>
                 <div id="minimize-button">-</div>
             </div>
                 <div id="box">
                     <ul id="sample-list">
-                        <li sample-id="0"><i id="0" class="fa fa-play-circle" aria-hidden="true"></i>HIMITSU Big Synth Chord.ogg</li>
-                        <li sample-id="1"><i id="1" class="fa fa-play-circle" aria-hidden="true"></i>HIMITSU Soft Piano.ogg</li>
-                        <li sample-id="2"><i id="2" class="fa fa-play-circle" aria-hidden="true"></i>HIMITSU Soft Synth.ogg</li>
-                        <li sample-id="3"><i id="3" class="fa fa-play-circle" aria-hidden="true"></i>HIMITSU Piano Low.ogg</li>
-                        <li sample-id="4"><i id="4" class="fa fa-play-circle" aria-hidden="true"></i>HIMITSU Drum Beat.ogg</li>
-                        <li sample-id="5"><i id="5" class="fa fa-play-circle" aria-hidden="true"></i>HIMITSU Cute Vocals.ogg</li>
-                        <li sample-id="6"><i id="6" class="fa fa-play-circle" aria-hidden="true"></i>HIMITSU Main Melody.ogg</li>
+                        <li sample-id="0"><i id="0" class="fa fa-play-circle" aria-hidden="true"></i>Big Synth Chord</li>
+                        <li sample-id="1"><i id="1" class="fa fa-play-circle" aria-hidden="true"></i>Soft Piano</li>
+                        <li sample-id="2"><i id="2" class="fa fa-play-circle" aria-hidden="true"></i>Soft Synth</li>
+                        <li sample-id="3"><i id="3" class="fa fa-play-circle" aria-hidden="true"></i>Piano Low</li>
+                        <li sample-id="4"><i id="4" class="fa fa-play-circle" aria-hidden="true"></i>Drum Beat</li>
+                        <li sample-id="5"><i id="5" class="fa fa-play-circle" aria-hidden="true"></i>Cute Vocals</li>
+                        <li sample-id="6"><i id="6" class="fa fa-play-circle" aria-hidden="true"></i>Main Melody</li>
+                        <li sample-id="7"><i id="7" class="fa fa-play-circle" aria-hidden="true"></i>Stories Bass</li>
+                        <li sample-id="8"><i id="8" class="fa fa-play-circle" aria-hidden="true"></i>Stories Bells</li>
+                        <li sample-id="9"><i id="9" class="fa fa-play-circle" aria-hidden="true"></i>Stories Big Synth Chord</li>
+                        <li sample-id="10"><i id="10" class="fa fa-play-circle" aria-hidden="true"></i>Stories Big Synth Chord v2</li>
+                        <li sample-id="11"><i id="11" class="fa fa-play-circle" aria-hidden="true"></i>Stories Drum beat</li>
+                        <li sample-id="12"><i id="12" class="fa fa-play-circle" aria-hidden="true"></i>Stories Hatsune Miku</li>
+                        <li sample-id="13"><i id="13" class="fa fa-play-circle" aria-hidden="true"></i>Stories Lead Melody</li>
+                        <li sample-id="14"><i id="14" class="fa fa-play-circle" aria-hidden="true"></i>Stories Lead Melody v2</li>
+                        <li sample-id="15"><i id="15" class="fa fa-play-circle" aria-hidden="true"></i>Stories Lead Melody v3</li>
+                        <li sample-id="16"><i id="16" class="fa fa-play-circle" aria-hidden="true"></i>Stories Piano1</li>
+                        <li sample-id="17"><i id="17" class="fa fa-play-circle" aria-hidden="true"></i>Stories Piano Build</li>
+                        <li sample-id="18"><i id="18" class="fa fa-play-circle" aria-hidden="true"></i>Stories Piano Build v2</li>
+                        <li sample-id="19"><i id="19" class="fa fa-play-circle" aria-hidden="true"></i>Stories Pluck</li>
+                        <li sample-id="20"><i id="20" class="fa fa-play-circle" aria-hidden="true"></i>Stories Sine Pluck</li>
+                        <li sample-id="21"><i id="21" class="fa fa-play-circle" aria-hidden="true"></i>FX Cymbals Crash</li>
+                        <li sample-id="22"><i id="22" class="fa fa-play-circle" aria-hidden="true"></i>FX Reverbed crash + kick</li>
+                        <li sample-id="23"><i id="23" class="fa fa-play-circle" aria-hidden="true"></i>FX Reverbed kick</li>
                     </ul>
                 </div>
         </div>
