more comments + starting the reverb implementation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 </script>
 
 <h1 id="header"><img src="images/turntable_icon.png">DJ Wannabe</h1>
-
     <div id="wrapper">
         <div id="playlist-container">
         </div>
@@ -63,6 +62,7 @@
 
         <div id="mixer-board">
             <div id="route1" class="mixer-route">
+                <input id="mixer-reverb1" class="reverb-box" name="checkName" type="checkbox"> 
                 <input id="panner1" type="range" min="-50" max="50" step="50" value="0" class="stereo-panner" title="L - R panning">
                 <div>
                     <input id="mixVolume1" class="mixer-volume" type="range" value="75" orient="vertical" title="Channel 1 volume">
@@ -78,6 +78,7 @@
                 <canvas id="volume-meter-1" class="volumeMeter" width="25" height="130"></canvas>
             </div>
             <div id="route2" class="mixer-route">
+                <input id="mixer-reverb2" class="reverb-box" name="checkName" type="checkbox">
                 <input id="panner2" type="range" min="-50" max="50" step="50" value="0" class="stereo-panner" title="L - R panning">
                 <div>
                     <input id="mixVolume2" class="mixer-volume" type="range" value="75" orient="vertical" title="Channel 2 volume">
@@ -91,6 +92,7 @@
                 <canvas id="volume-meter-2" class="volumeMeter" width="25" height="130"></canvas>
             </div>
             <div id="route3" class="mixer-route">
+                <input id="mixer-reverb3" class="reverb-box" name="checkName" type="checkbox">
                 <input id="panner3" type="range" min="-50" max="50" step="50" value="0" class="stereo-panner" title="L - R panning">
                 <div>
                     <input id="mixVolume3" class="mixer-volume" type="range" value="75" orient="vertical" title="Channel 3 volume"> 
@@ -104,6 +106,7 @@
                 <canvas id="volume-meter-3" class="volumeMeter" width="25" height="130"></canvas>
             </div>
             <div id="route4" class="mixer-route">
+                <input id="mixer-reverb4" class="reverb-box" name="checkName" type="checkbox">
                 <input id="panner4" type="range" min="-50" max="50" step="50" value="0" class="stereo-panner" title="L - R panning">
                 <div>
                     <input id="mixVolume4" class="mixer-volume" type="range" value="75" orient="vertical" title="Channel 4 volume">
@@ -117,6 +120,7 @@
                 <canvas id="volume-meter-4" class="volumeMeter" width="25" height="130"></canvas>
             </div>
             <div id="route5" class="mixer-route">
+                <input id="mixer-reverb5" class="reverb-box" name="checkName" type="checkbox">
                 <input id="panner5" type="range" min="-50" max="50" step="50" value="0" class="stereo-panner" title="L - R panning">
                 <div>
                     <input id="mixVolume5" class="mixer-volume" type="range" value="75" orient="vertical" title="Channel 5 volume">
